// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Route) Ask (Render) when canSubmitPoll is true matches snapshot 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <meta
      charSet="utf-8"
    />
    <title>
      It's Going To Be
    </title>
    <meta
      content="Wondering where to go or what to see? Start a poll and share it with your friends or colleagues."
      name="description"
    />
    <meta
      content="question vote poll result"
      name="keywords"
    />
  </HelmetWrapper>
  <div
    className="container header-container hideable"
  >
    <div
      className="header center-text"
    >
      <h1>
        <WordRotate
          words="What,Where,When,Who"
        />
         is it going to be?
      </h1>
    </div>
  </div>
  <div
    className="container question-container"
  >
    <Connect(Question)
      canSubmitPoll={true}
      placeholderText={
        Array [
          "What film should we watch?",
          "Who is going to win the league?",
          "Where should we go for drinks?",
          "You talking to me?",
          "What should we do this weekend?",
          "When should we go to Paris?",
          "Who ya gonna call?",
          "When will you start a poll?",
        ]
      }
      question=""
    />
    <Component
      answers={Array []}
      hasQuestion={false}
    />
    <Options
      hasQuestion={false}
      poll={Object {}}
    />
    <Connect(Actions)
      canSubmitPoll={true}
      hasQuestion={false}
    />
  </div>
</div>
`;

exports[`(Route) Ask (Render) when hasQuestion is true matches snapshot 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <meta
      charSet="utf-8"
    />
    <title>
      It's Going To Be
    </title>
    <meta
      content="Wondering where to go or what to see? Start a poll and share it with your friends or colleagues."
      name="description"
    />
    <meta
      content="question vote poll result"
      name="keywords"
    />
  </HelmetWrapper>
  <div
    className="container header-container hideable gone"
  >
    <div
      className="header center-text"
    >
      <h1>
        <WordRotate
          words="What,Where,When,Who"
        />
         is it going to be?
      </h1>
    </div>
  </div>
  <div
    className="container question-container move-up"
  >
    <Connect(Question)
      canSubmitPoll={false}
      placeholderText={
        Array [
          "What film should we watch?",
          "Who is going to win the league?",
          "Where should we go for drinks?",
          "You talking to me?",
          "What should we do this weekend?",
          "When should we go to Paris?",
          "Who ya gonna call?",
          "When will you start a poll?",
        ]
      }
      question=""
    />
    <Component
      answers={Array []}
      hasQuestion={true}
    />
    <Options
      hasQuestion={true}
      poll={Object {}}
    />
    <Connect(Actions)
      canSubmitPoll={false}
      hasQuestion={true}
    />
  </div>
</div>
`;

exports[`(Route) Ask (Render) with answers matches snapshot 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <meta
      charSet="utf-8"
    />
    <title>
      It's Going To Be
    </title>
    <meta
      content="Wondering where to go or what to see? Start a poll and share it with your friends or colleagues."
      name="description"
    />
    <meta
      content="question vote poll result"
      name="keywords"
    />
  </HelmetWrapper>
  <div
    className="container header-container hideable"
  >
    <div
      className="header center-text"
    >
      <h1>
        <WordRotate
          words="What,Where,When,Who"
        />
         is it going to be?
      </h1>
    </div>
  </div>
  <div
    className="container question-container"
  >
    <Connect(Question)
      canSubmitPoll={false}
      placeholderText={
        Array [
          "What film should we watch?",
          "Who is going to win the league?",
          "Where should we go for drinks?",
          "You talking to me?",
          "What should we do this weekend?",
          "When should we go to Paris?",
          "Who ya gonna call?",
          "When will you start a poll?",
        ]
      }
      question=""
    />
    <Component
      answers={
        Array [
          "Answer 1",
          "Answer 2",
        ]
      }
      hasQuestion={false}
    />
    <Options
      hasQuestion={false}
      poll={Object {}}
    />
    <Connect(Actions)
      canSubmitPoll={false}
      hasQuestion={false}
    />
  </div>
</div>
`;

exports[`(Route) Ask (Render) with poll matches snapshot 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <meta
      charSet="utf-8"
    />
    <title>
      It's Going To Be
    </title>
    <meta
      content="Wondering where to go or what to see? Start a poll and share it with your friends or colleagues."
      name="description"
    />
    <meta
      content="question vote poll result"
      name="keywords"
    />
  </HelmetWrapper>
  <div
    className="container header-container hideable"
  >
    <div
      className="header center-text"
    >
      <h1>
        <WordRotate
          words="What,Where,When,Who"
        />
         is it going to be?
      </h1>
    </div>
  </div>
  <div
    className="container question-container"
  >
    <Connect(Question)
      canSubmitPoll={false}
      placeholderText={
        Array [
          "What film should we watch?",
          "Who is going to win the league?",
          "Where should we go for drinks?",
          "You talking to me?",
          "What should we do this weekend?",
          "When should we go to Paris?",
          "Who ya gonna call?",
          "When will you start a poll?",
        ]
      }
      question=""
    />
    <Component
      answers={Array []}
      hasQuestion={false}
    />
    <Options
      hasQuestion={false}
      poll={
        Object {
          "identifier": "kdH98eJ",
          "question": "Question",
        }
      }
    />
    <Connect(Actions)
      canSubmitPoll={false}
      hasQuestion={false}
    />
  </div>
</div>
`;

exports[`(Route) Ask (Render) with question matches snapshot 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <meta
      charSet="utf-8"
    />
    <title>
      It's Going To Be
    </title>
    <meta
      content="Wondering where to go or what to see? Start a poll and share it with your friends or colleagues."
      name="description"
    />
    <meta
      content="question vote poll result"
      name="keywords"
    />
  </HelmetWrapper>
  <div
    className="container header-container hideable"
  >
    <div
      className="header center-text"
    >
      <h1>
        <WordRotate
          words="What,Where,When,Who"
        />
         is it going to be?
      </h1>
    </div>
  </div>
  <div
    className="container question-container"
  >
    <Connect(Question)
      canSubmitPoll={false}
      placeholderText={
        Array [
          "What film should we watch?",
          "Who is going to win the league?",
          "Where should we go for drinks?",
          "You talking to me?",
          "What should we do this weekend?",
          "When should we go to Paris?",
          "Who ya gonna call?",
          "When will you start a poll?",
        ]
      }
      question="Some question"
    />
    <Component
      answers={Array []}
      hasQuestion={false}
    />
    <Options
      hasQuestion={false}
      poll={Object {}}
    />
    <Connect(Actions)
      canSubmitPoll={false}
      hasQuestion={false}
    />
  </div>
</div>
`;
